# stella_gc

./: .gitignore  CMakeLists.txt  README.md  compile_run.sh
.github/workflows/: cmake-single-platform.yml
src/: gc.c  gc.h
stella/: CMakeLists.txt  gc.c
stella_examples/: factorial.c  logical_operations.c  square_numbers.c
test/: CMakeLists.txt  main.cpp
